# fraction

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  llms.txt  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  tsconfig.oxc.base.json  tsconfig.oxc.json
.intent/: config.json
benchmarks/: bun-sdk-benchmark.ts  download_datasets.sh  generate_dataset.py  locomo.py  metrics.py  prompts.py  run_benchmarks.py
benchmarks/parity/: README.md  __init__.py  config.schema.json  normalize.py  normalize.ts  orchestrate.ts  python_runner.py  report.ts  ts_runner.ts
benchmarks/parity/datasets/: locomo.manifest.json  synthetic-memory.json
benchmarks/parity/scenarios/: defaults.json  qa.json  smoke.json  strict.json
docs/: package-lock.json  package.json  typescript-sdk-migration.md
docs/app/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: api-fraction.mdx  api-memory.mdx  benchmarks.mdx  changelog.mdx  configuration.mdx  extraction-modes.mdx  how-it-works.mdx  index.mdx  meta.json  quick-start.mdx
fraction/: __init__.py  client.py  compressor.py  config.py  embedder.py  entity.py  graph.py  memory.py  retriever.py  storage.py  types.py  utils.py  vector_store.py
reports/: benchmark_report.md  benchmark_results.json
reports/llm/: benchmark_report.md  benchmark_results.json
reports/llmlingua2/: benchmark_report.md  benchmark_results.json
tests/: test_compressor.py  test_entity.py  test_memory.py  test_retriever.py  test_vector_store.py
