[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractionally"
version = "0.1.0"
description = "Persistent memory layer for LLM agents. Zero LLM calls, sub-100ms ingestion, deterministic extraction."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Adib"},
]
keywords = ["memory", "llm", "agents", "rag", "embeddings", "compression", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "sentence-transformers>=2.2",
    "llmlingua>=0.2",
    "spacy>=3.5",
    "usearch>=2.0",
    "sqlalchemy>=2.0",
    "rank-bm25>=0.2",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
ensemble = [
    "transformers>=4.30",
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/pacifio/fraction"
Repository = "https://github.com/pacifio/fraction"

[tool.setuptools.packages.find]
include = ["fraction*"]
exclude = ["tests*", "benchmarks*", "reports*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
